Clean-up & Linking
Fixing the link for HTML on the Desktop experience + carousel optics.

As well as updating the Survey Research

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
         </div>
 
         <div class="case-card">
-            <h2 class="card-title">Survey Research & User Experience</h2>
+            <a href="survey-research.html">
+                <h2 class="card-title">Survey Research & User Experience</h2>
+            </a>
             <div class="category-tag">
                 <span class="category-type" id="Work Example">Case Study</span>
                 <span class="category-type UI-color" id="UI&UX">UI & UX Design</span>
@@ -122,9 +124,11 @@
             </div>
             <p class="card-description">Lorem Lorem Lorem Lorem Ipsum Ipsum Ipsum Ipsum Lorem Ipsum</p>
             <div class="card-divider mb-4"></div>
-            <div class="card-image-container">
-                <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
-            </div>
+            <a href="survey-research.html">
+                <div class="card-image-container">
+                    <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
+                </div>
+            </a>
         </div>
 
         <div class="case-card">
