--- a/Cardify.html
+++ b/Cardify.html
@@ -28,7 +28,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="5" height="5" viewBox="0 0 5 5" fill="none">
                     <circle cx="2.5" cy="2.5" r="2.5" fill="#D9D9D9"/>
                     </svg>
-                <p class="article-font">2023</p>
+                <p class="article-font">2020-2022</p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="5" height="5" viewBox="0 0 5 5" fill="none">
                     <circle cx="2.5" cy="2.5" r="2.5" fill="#D9D9D9"/>
                     </svg>
@@ -100,17 +100,26 @@
             <div class="toc-tooltip ">
                 <div class="divider mt-4"></div>
                 <div class="tooltip">Click the arrow to find a specific page section</div>
-                <div id="progress-container">
-                    <svg width="100" height="100" class="progress-ring">
-                        <circle r="40" cx="50" cy="50" fill="transparent" stroke-dasharray="251.327" stroke-dashoffset="251.327" stroke-width="5" stroke="white"></circle>
-                        <circle r="30" cx="50" cy="50" fill="transparent" stroke-dasharray="188.496" stroke-dashoffset="188.496" stroke-width="5" stroke="#D63C3C"></circle>
-                    </svg>
-                </div>
             </div>
         </div>   
     </div>
 
     <div class="text-holder">
+        <div id="progress-container">
+            <svg width="100" height="100" class="progress-ring">
+                <!-- Grouping circles -->
+                <g>
+                    <circle r="40" cx="50" cy="50" fill="transparent" stroke-dasharray="251.327" stroke-dashoffset="251.327" stroke-width="5" stroke="white"></circle>
+                    <circle r="30" cx="50" cy="50" fill="transparent" stroke-dasharray="188.496" stroke-dashoffset="188.496" stroke-width="5" stroke="#D63C3C"></circle>
+                </g>
+        
+                <!-- Adding home icon using a group and adjusting its position and scale -->
+                <a href="index.html"><g transform="translate(65, 41) scale(1.2) rotate(90)">
+                    <path class="home-return" d="M0 17.88V6.96L8 0L16 6.96V17.88H10V11.88H6V17.88H0Z" fill="white"/>
+
+                </g></a>
+            </svg>
+        </div>
         <div class="text-content">
             
             <div class="chart-holder1 content-hugging">
