--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
    </div>
     
-    <div class="carousel">
+    <div class="carousel hidden-scrollbar">
         <div class="case-card">
             <a href="Cardify.html">
                 <h2 class="card-title">Cardify</h2>
