--- a/survey-research.html
+++ b/survey-research.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link href="article-grid.css" rel="stylesheet">
-    <title>Ibrahim Awad - Design & Data Visualization </title>
+    <title>Ibrahim Awad - Survey Research</title>
 </head>
 <body class="bg-black">
 
