Trying to fix the Table of Contents Animation
Will debug this next time

--- a/Cardify.html
+++ b/Cardify.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="toc">
-                <p class="toc-subhead" style="font-size: 16px;">Making Process Optimizations</p>
+                <p class="toc-subhead" style="font-size: 16px;">Product Process & Creating Articles</p>
                 <div class="direction-pointer cardify-color" data-target="a4">
                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
                         <path d="M0.537812 6.12583L11.1849 6.31167L6.3798 1.3358L7.64364 0.123927L14.5204 7.24503L7.39931 14.1218L6.18728 12.8667L11.1544 8.06141L0.50727 7.87556L0.537812 6.12583Z" fill="#D63C3C"/>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="toc">
-                <p class="toc-subhead" style="font-size: 16px;">Understanding the Environment</p>
+                <p class="toc-subhead" style="font-size: 16px;">Making Small Process Improvements</p>
                 <div class="direction-pointer UI-color" data-target="a5">
                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
                         <path d="M0.537812 6.12583L11.1849 6.31167L6.3798 1.3358L7.64364 0.123927L14.5204 7.24503L7.39931 14.1218L6.18728 12.8667L11.1544 8.06141L0.50727 7.87556L0.537812 6.12583Z" fill="#D63C3C"/>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="toc">
-                <p class="toc-subhead" style="font-size: 16px;">Practical Applications for Design</p>
+                <p class="toc-subhead" style="font-size: 16px;">Managing Web Operations & Content Design</p>
                 <div class="direction-pointer UI-color" data-target="a6">
                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
                         <path d="M0.537812 6.12583L11.1849 6.31167L6.3798 1.3358L7.64364 0.123927L14.5204 7.24503L7.39931 14.1218L6.18728 12.8667L11.1544 8.06141L0.50727 7.87556L0.537812 6.12583Z" fill="#D63C3C"/>
@@ -172,7 +172,7 @@
 
                     <p class="text-copy">Cardify was created from Drop (its parent company), Drop provided credit and debit card data acquired with permission from users for loyalty rewards. Cardify had the access to the data of over 3M millenials and saw a GMV spend of over $40 billion dollars throughout my time. With this data we would then craft a report, based on the specifics of the story or a business request.<br><br>If we're looking at an example of a company, for example, Burger King would like to learn more about its customers. We would be able to compare a cross-section of the wallet for the business. By using our dataset to evaluate a individuals average spend, transaction frequency, as well as competitor spend. This being a key business value, as we could provide a full-view of consumer spend as well as distinctly ask those specific individuals a survey regarding the company itself. When executed at scale, providing the transactional data trend as well as quantitative insights is very powerful.</p>
 
-                    <div class="chart-holder1 content-hugging"><p class="title-copy" style="font-size: 24px; opacity: 75%;" id="a4">Making small process optimizations</p></div>
+                    <div class="chart-holder1 content-hugging"><p class="title-copy" style="font-size: 24px; opacity: 75%;" id="a5">Making small process optimizations</p></div>
 
                     <div class="chart-holder2 content-hugging">
                         <img src="cardify-assets/easierOutput.png" alt="Description of the SVG">
@@ -209,7 +209,7 @@
                     </div>
 
 
-                    <div class="chart-holder1 content-hugging"><p class="title-copy" style="font-size: 24px; opacity: 75%;" id="a5">Managing Web Operations & Content Design</p></div>
+                    <div class="chart-holder1 content-hugging"><p class="title-copy" style="font-size: 24px; opacity: 75%;" id="a6">Managing Web Operations & Content Design</p></div>
 
                     <div class="chart-holder2 content-hugging">
                         <img src="cardify-assets/sitemap-cardify.png" alt="Description of the SVG">
