Fixed the Scaling of Cards
Mostly worked on media breakpoints as well as turning the category tag into a grid that breaks down to a smaller size.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="carousel hidden-scrollbar">
         <div class="case-card">
             <a href="Cardify.html">
-                <h2 class="card-title">Cardify</h2>
+                <h2 class="card-title">Cardify - Web Development, Design & Marketing</h2>
             </a>
             <div class="category-tag">
                 <span class="category-type" id="Work Example">Work Example</span>
@@ -84,7 +84,7 @@
                 <span class="category-type Desktop-color" id="Desktop">Marketing</span>
 
             </div>
-            <p class="card-description">Cardify is the transactional data arm of Drop, now known as Drop for Business. </p>
+            <p class="card-description">Cardify is the transactional data arm of Drop, now known as Drop for Business. As well as explaining my role.</p>
             <div class="card-divider mb-4"></div>
             <a href="Cardify.html">
             <div class="card-image-container">
@@ -94,7 +94,7 @@
         </div>
 
         <div class="case-card">
-            <h2 class="card-title">Data Visualization & Design</h2>
+            <h2 class="card-title">Improving Data Visualizations with Design</h2>
             <div class="category-tag">
                 <span class="category-type" id="Work Example">Thought Process</span>
                 <span class="category-type UI-color" id="UI&UX">UI & UX Design</span>
@@ -113,7 +113,7 @@
 
         <div class="case-card">
             <a href="survey-research.html">
-                <h2 class="card-title">Survey Research & User Experience</h2>
+                <h2 class="card-title">Surveys to Understand User Problems</h2>
             </a>
             <div class="category-tag">
                 <span class="category-type" id="Work Example">Case Study</span>
@@ -129,22 +129,6 @@
                     <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
                 </div>
             </a>
-        </div>
-
-        <div class="case-card">
-            <h2 class="card-title">Data Visualization & Design</h2>
-            <div class="category-tag">
-                <span class="category-type" id="Work Example">Thought Process</span>
-                <span class="category-type UI-color" id="UI&UX">UI & UX Design</span>
-                <span class="category-type Coding-color" id="Coding">Coding</span>
-                <span class="category-type Desktop-color" id="Desktop">Desktop</span>
-
-            </div>
-            <p class="card-description">Lorem Lorem Lorem Lorem Ipsum Ipsum Ipsum Ipsum Lorem Ipsum</p>
-            <div class="card-divider mb-4"></div>
-            <div class="card-image-container">
-                <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
-            </div>
         </div>
 
 
