Added landing photo for surveys
Cleaning up more of the extra stuff for the index.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <div class="landing-grid">
     <div class="sticky-fix">
         <div class="landing-links">
-            <!-- Personal Name -->
             <div class="myInfo">
-                <h1 class ="UI-color">Ibrahim Awad</h1>
+                <h1 class ="UI-color name">Ibrahim Awad</h1>
                 <h1>Product Designer</h1>
             </div>
             <div class="divider-holder">
@@ -122,11 +121,11 @@
                 <span class="category-type Desktop-color" id="Desktop">Desktop</span>
 
             </div>
-            <p class="card-description">Lorem Lorem Lorem Lorem Ipsum Ipsum Ipsum Ipsum Lorem Ipsum</p>
+            <p class="card-description">Qualtrics surveys directly to users, to understand underlying problems</p>
             <div class="card-divider mb-4"></div>
             <a href="survey-research.html">
                 <div class="card-image-container">
-                    <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
+                    <img src="home-assets/survey-research-header.png" alt="card image showing the homepage of cardify" class="card-image">
                 </div>
             </a>
         </div>
