--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="divider-holder">
                 <div class="divider-home" id="animation-tag"></div>
             </div>
+            <a href="mailto:ibrahim.a.awad16@gmail.com?subject=Hello&body=Message%20Body">
             <nav class="navigation-links">
                 <ul class="nav-item" id="Email">
                     <svg class="nav-icon mt-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -32,6 +33,8 @@
                         Email
                     </div>
                 </ul>
+            </a>
+                <a href="/resume/Ibrahim_Awad_Resume_2023.pdf" target="_blank">
                 <ul class="nav-item" id="Resume">
                     <svg class=" nav-icon mt-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                         <path d="M11 10H5M7 14H5M13 6H5M17 5.8V16.2C17 17.8802 17 18.7202 16.673 19.362C16.3854 19.9265 15.9265 20.3854 15.362 20.673C14.7202 21 13.8802 21 12.2 21H5.8C4.11984 21 3.27976 21 2.63803 20.673C2.07354 20.3854 1.6146 19.9265 1.32698 19.362C1 18.7202 1 17.8802 1 16.2V5.8C1 4.11984 1 3.27976 1.32698 2.63803C1.6146 2.07354 2.07354 1.6146 2.63803 1.32698C3.27976 1 4.11984 1 5.8 1H12.2C13.8802 1 14.7202 1 15.362 1.32698C15.9265 1.6146 16.3854 2.07354 16.673 2.63803C17 3.27976 17 4.11984 17 5.8Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -40,15 +43,18 @@
                         Resume
                     </div>
                 </ul>
-                <ul class="nav-item" id="LinkedIn">
-                    <svg class="nav-icon mt-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                        <path d="M9 16C12.866 16 16 12.866 16 9C16 5.13401 12.866 2 9 2C5.13401 2 2 5.13401 2 9C2 12.866 5.13401 16 9 16Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                        <path d="M15 22C18.866 22 22 18.866 22 15C22 11.134 18.866 8 15 8C11.134 8 8 11.134 8 15C8 18.866 11.134 22 15 22Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                    <div class="icon-link">
-                        LinkedIn
-                    </div>
-                </ul>
+            </a>
+                <a href="https://www.linkedin.com/in/ibrahimaawad/" target="_blank">
+                    <ul class="nav-item" id="LinkedIn">
+                        <svg class="nav-icon mt-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                            <path d="M9 16C12.866 16 16 12.866 16 9C16 5.13401 12.866 2 9 2C5.13401 2 2 5.13401 2 9C2 12.866 5.13401 16 9 16Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M15 22C18.866 22 22 18.866 22 15C22 11.134 18.866 8 15 8C11.134 8 8 11.134 8 15C8 18.866 11.134 22 15 22Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                        <div class="icon-link">
+                            LinkedIn
+                        </div>
+                    </ul>
+                </a>
                 <ul class="nav-item" id="Figma Designs">
                     <svg class="nav-icon mt-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                         <path d="M9 3.5V2M5.06066 5.06066L4 4M5.06066 13L4 14.0607M13 5.06066L14.0607 4M3.5 9H2M15.8645 16.1896L13.3727 20.817C13.0881 21.3457 12.9457 21.61 12.7745 21.6769C12.6259 21.7349 12.4585 21.7185 12.324 21.6328C12.1689 21.534 12.0806 21.2471 11.9038 20.6733L8.44519 9.44525C8.3008 8.97651 8.2286 8.74213 8.28669 8.58383C8.33729 8.44595 8.44595 8.33729 8.58383 8.2867C8.74213 8.22861 8.9765 8.3008 9.44525 8.44519L20.6732 11.9038C21.247 12.0806 21.5339 12.169 21.6327 12.324C21.7185 12.4586 21.7348 12.6259 21.6768 12.7745C21.61 12.9458 21.3456 13.0881 20.817 13.3728L16.1896 15.8645C16.111 15.9068 16.0717 15.9279 16.0374 15.9551C16.0068 15.9792 15.9792 16.0068 15.9551 16.0374C15.9279 16.0717 15.9068 16.111 15.8645 16.1896Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -72,6 +78,25 @@
    </div>
     
     <div class="carousel hidden-scrollbar">
+
+        <div class="case-card">
+            <h2 class="card-title">Improving Data Visualizations with Design</h2>
+            <div class="category-tag">
+                <span class="category-type" id="Work Example">Thought Process</span>
+                <span class="category-type UI-color" id="UI&UX">UI & UX Design</span>
+                <span class="category-type Coding-color" id="Coding">Coding</span>
+                <span class="category-type Desktop-color" id="Desktop">Desktop</span>
+
+            </div>
+            <p class="card-description">Explaining my thought process and process for designing Data Visualization</p>
+            <div class="card-divider mb-4"></div>
+            <a href="designdataviz.html">
+                <div class="card-image-container">
+                    <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
+                </div>
+            </a>
+        </div>
+
         <div class="case-card">
             <a href="Cardify.html">
                 <h2 class="card-title">Cardify - Web Development, Design & Marketing</h2>
@@ -92,23 +117,7 @@
             </a>
         </div>
 
-        <div class="case-card">
-            <h2 class="card-title">Improving Data Visualizations with Design</h2>
-            <div class="category-tag">
-                <span class="category-type" id="Work Example">Thought Process</span>
-                <span class="category-type UI-color" id="UI&UX">UI & UX Design</span>
-                <span class="category-type Coding-color" id="Coding">Coding</span>
-                <span class="category-type Desktop-color" id="Desktop">Desktop</span>
 
-            </div>
-            <p class="card-description">Explaining my thought process and process for designing Data Visualization</p>
-            <div class="card-divider mb-4"></div>
-            <a href="designdataviz.html">
-                <div class="card-image-container">
-                    <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
-                </div>
-            </a>
-        </div>
 
         <div class="case-card">
             <a href="survey-research.html">
