--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
         <link href="animations_2.css" rel="stylesheet">
-        <title>Ibrahim Awad - Design & Data Visualization </title>
+        <title>Ibrahim Awad - Portfolio </title>
     </head>
 <body class="bg-black">
 <!-- Simple Div for Landing Animation -->
@@ -18,7 +18,7 @@
         <div class="landing-links">
             <div class="myInfo">
                 <h1 class ="UI-color name">Ibrahim Awad</h1>
-                <h1>Product Designer</h1>
+                <h1>Product Person</h1>
             </div>
             <div class="divider-holder">
                 <div class="divider-home" id="animation-tag"></div>
