--- a/Cardify.html
+++ b/Cardify.html
@@ -106,7 +106,7 @@
 
     <div class="text-holder">
         <div id="progress-container">
-            <svg width="100" height="100" class="progress-ring">
+            <svg width="100" height="100" class="progress-ring gradient">
                 <!-- Grouping circles -->
                 <g>
                     <circle r="40" cx="50" cy="50" fill="transparent" stroke-dasharray="251.327" stroke-dashoffset="251.327" stroke-width="5" stroke="white"></circle>
