--- a/designdataviz.html
+++ b/designdataviz.html
@@ -105,7 +105,7 @@
     </div>
 
     <div class="text-holder">
-        <div id="progress-container">
+        <div id="progress-container gradient">
             <svg width="100" height="100" class="progress-ring">
                 <!-- Grouping circles -->
                 <g>
