--- a/survey-research.html
+++ b/survey-research.html
@@ -99,7 +99,7 @@
     </div>
 
     <div class="text-holder">
-        <div id="progress-container">
+        <div id="progress-container gradient">
             <svg width="100" height="100" class="progress-ring">
                 <!-- Grouping circles -->
                 <g>
