Progress Indicator Fix.
The gradient element was overtaking the CSS styling of the Progress Indicator.

Merged the CSS classes (the better idea), as well as removed an older non-functioning version of the cardify-page.

--- a/survey-research.html
+++ b/survey-research.html
@@ -99,7 +99,7 @@
     </div>
 
     <div class="text-holder">
-        <div id="progress-container gradient">
+        <div id="progress-container">
             <svg width="100" height="100" class="progress-ring">
                 <!-- Grouping circles -->
                 <g>
