--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <span class="category-type Desktop-color" id="Desktop">Desktop</span>
 
             </div>
-            <p class="card-description">Explaining my thought process and process for designing Data Visualization</p>
+            <p class="card-description">Explaining my thought process for designing Data Visualization</p>
             <div class="card-divider mb-4"></div>
             <a href="designdataviz.html">
                 <div class="card-image-container">
