Added the DALL-E generation for the image

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="card-divider mb-4"></div>
             <a href="designdataviz.html">
                 <div class="card-image-container">
-                    <img src="home-assets/testing-home.png" alt="card image showing the homepage of cardify" class="card-image">
+                    <img src="home-assets/dataviz.png" alt="card image showing the homepage of cardify" class="card-image">
                 </div>
             </a>
         </div>
@@ -110,7 +110,7 @@
                 <span class="category-type Desktop-color" id="Desktop">Marketing</span>
 
             </div>
-            <p class="card-description">Cardify is the transactional data arm of Drop, now known as Drop for Business. As well as explaining my role.</p>
+            <p class="card-description">Cardify is the transactional data arm of Drop, now known as Drop for Business.</p>
             <div class="card-divider mb-4"></div>
             <a href="Cardify.html">
             <div class="card-image-container">
