--- a/index.html
+++ b/index.html
@@ -147,7 +147,22 @@
     </div>
 </div>
 
+<div class="testing-background">
+    <div class="shape-container">
+        <div class="shape" style="top: 25%; left: 25%;"></div>
+        <div class="shape" style="top: 50%; left: 50%;"></div>
+        <div class="shape" style="top: 70%; left: 30%;"></div>
+        <div class="shape" style="top: 20%; left: 40%;"></div>
+        <div class="shape" style="top: 100%; left: 0%;"></div>
+        <div class="shape" style="top: 75%; left: 75%;"></div>
+    </div>
+</div>
+
+
 <script src="animation-helper.js"></script>
+<script src="gradient-background.js"></script>
+
+
 
 </body>
 </html>
